[fix] overflow for main

--- a/css/settings/styles.css
+++ b/css/settings/styles.css
@@ -13,6 +13,7 @@
 
   padding-left: 350px;
   gap: 60px;
+  overflow-x: hidden;
 }
 
 .main > * {
